fix menu overflow

--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -87,6 +87,9 @@
       transform: translateY(0%) !important
       pointer-events: auto !important
 
+  #shop-menu-holder
+    overflow: unset
+
   #shop-menu-list
     position: relative
     transform: rotate(0)
